--- a/content/blog/2022-12-27-hobbies-in-2022.md
+++ b/content/blog/2022-12-27-hobbies-in-2022.md
@@ -4,7 +4,7 @@
 
 It's almost the end of the year, so what better time to reflect on how I chose to spend the most notable portions of my spare time in 2022. I might even learn something about who I am along the way.
 
-In particular I'll be focusing on Dungeons & Dragons, and domestic travel. I could also talk about playing video games or watching unhealthy amounts of YouTube, but I'd prefer to focus on the activities that I'm comfortable defining me.
+In particular I'll be focusing on Dungeons & Dragons and domestic travel. I could also talk about playing video games or watching unhealthy amounts of YouTube, but I'd prefer to focus on the activities that I'm comfortable defining me.
 
 ## Dungeons & Dragons & COVID-19
 
@@ -75,7 +75,7 @@ It has been levelled at me that I am an "all or nothing" person, and I concur. M
 - Tell three stories, intertwined and concurrent, rather than putting that same effort into one exceptional story.
 - Write a wiki of session notes, character details and settings, all never to be seen by anyone else, rather than settling for a Google Doc.
 - Program software to organise said wiki when it became too unwieldy, rather than trimming the fat.
-- Bootstrap a virtual tabletop game for in-game battle visualisations, rather than using an off-the-shelf 
+- Bootstrap a virtual tabletop game for in-game battle visualisations, rather than using an off-the-shelf VTT.
 - Create custom character models for characters important and minor, rather than letting players' imagination paint a picture.
 - Curate a dozen ambient music playlists on Spotify, rather than finding pre-made playlists.
 - Program a TV graphic-esque overlay for [OBS](https://obsproject.com/), wildly increasing how many plates I was spinning as Dungeon Master during a session, rather than accepting a less visually appealing experience.
