--- a/content/blog/2022-12-27-hobbies-in-2022.md
+++ b/content/blog/2022-12-27-hobbies-in-2022.md
@@ -122,7 +122,7 @@ So with domestic travel now my dominant hobby, how will I inevitably ruin it for
 
 While I've learned that too much of a good thing is indeed possible, travel is much harder to have in excess. Limiting my travel to weekend and work vacation days should provide a firm limit on creeping ambitions and it keeps my weekdays free. Travel is an order of magnitude less preparation than D&D, so I have the vast majority of my evenings free for other pursuits or relaxation, and the time I do have to commit to planning isn't as pressing - I can do it when the mood strikes.
 
-The start of any sort of travel obsession this year was looking at my Apple Photos albums for 2022 grow, then setting my sights on beating 2019's album count of 34. 75 is certainly a high score. Setting an arbitrary goal like this helped spur me on at times when I would have quite happily lazed at home. Beating the high score in 2023 wouldn't be a healthy target.
+The start of any sort of travel obsession this year was looking at my Apple Photos albums for 2022 grow, then setting my sights on beating 2019's album count of 34; I blew it out of the water with 75. Setting an arbitrary goal like this helped spur me on at times when I would have quite happily lazed at home. Beating the high score in 2023 wouldn't be a healthy target.
 
 As my experience of travel planning has increased, so too have the steps in my method. I now maintain a custom Google Map with all of my travel ideas pinned to it, and my web browser is littered with tab groups devoted to future trip ideas. Recently I created a Trello board to help schedule a litany of trips next year around busy school holidays and friends' committments.
 
