--- a/content/blog/2022-12-27-hobbies-in-2022.md
+++ b/content/blog/2022-12-27-hobbies-in-2022.md
@@ -18,7 +18,7 @@ As 2022 began I was at the height of my craft. The stories I had created were ma
 
 While that all sounds frightful, I was in my element. I would daydream of directions we could take the stories, and concocted fresh ways to delight my players. I felt comfortable with the committment, confident I was just printing enjoyment. After all, you can't have too much of a good thing, right?
 
-<img src="../../public/photos/IMG_8176.jpeg" alt="My computer desk set up ready for Dungeons & Dragons. Two monitors, an open laptop for a third screen, headphones, a headset, a microphone on an adjustable arm, and a tray for rolling dice." />
+<img src="../../public/photos/dnd-setup.jpeg" alt="My computer desk set up ready for Dungeons & Dragons. Two monitors, an open laptop for a third screen, headphones, a headset, a microphone on an adjustable arm, and a tray for rolling dice." />
 
 ## A Job That Felt Like a Hobby
 
@@ -54,7 +54,7 @@ The answer, distilled through several years of visiting my girlfriend in the Lak
 
 I set off at 04:00, keen to have enough time to reach my destination, return to Edinburgh, and stop as I may along the way. A typical creature of habit, traversing unknown roads and pushing on into untapped scenery was refreshing, reinvigorating. While the A9 to Inverness is notoriously boring to drive, I revelled in the snow still clinging to the Grampian Mountains. A mundane glance at my satnav revealed a patch of blue near the road, so I deviated, rewarded with my first loch of the year - [Loch Ericht](https://en.wikipedia.org/wiki/Loch_Ericht).
 
-<img src="../../public/photos/IMG_8282.jpeg" alt="Loch Etive in early spring. A large lake flanked by tree-covered hills and clouds. Mountains in the distance still retain some snow." />
+<img src="../../public/photos/loch-ericht.jpeg" alt="Loch Etive in early spring. A large lake flanked by tree-covered hills and clouds. Mountains in the distance still retain some snow." />
 
 All of this was possible with a day of spare time, an early alarm, and the drive to find somewhere exciting. I was hooked. Soon I was at Loch Ness, then visiting Urquhart Castle before midday, despite being over 300 miles from home. If I had travelled south instead of north, I'd be in London.
 
@@ -84,7 +84,7 @@ It has been levelled at me that I am an "all or nothing" person, and I concur. M
 
 Each extra facet left less time for the others and made it easier to dance around the prep I loathed to complete. I was buckling under the weight of my accumulated undertakings and couldn't bring myself to shed weight.
 
-<img src="../photos/IMG_9043.jpeg" />
+<img src="../../public/photos/totoro-dice.jpeg" />
 
 ## Having the Courage to Stop
 
@@ -108,7 +108,7 @@ As D&D waned, the void was filled with more domestic adventures. A smattering of
 
 Eventually I started staying overnight - initially just overnight trips. The first was on a trip to Loch Alsh and the Isle of Skye with a friend - the latter only possible with the night's stay. I got to see the Old Man of Storr with my own eyes, a bucket list item, the first place in the highlands that I'd ever known by name.
 
-<img src="../../public/photos/IMG_9511.jpeg" alt="The Old Man of Storr. Three dark jagged spines of rock erupt from the hillside. In the background water and land alternate three times, with mountains on the Scottish mainland visible." />
+<img src="../../public/photos/old-man-of-storr.jpeg" alt="The Old Man of Storr. Three dark jagged spines of rock erupt from the hillside. In the background water and land alternate three times, with mountains on the Scottish mainland visible." />
 
 It feels silly to sing the virtues of *staying overnight when on a trip*, but I hadn't stayed anywhere since 2019, and before that I preferred the comfort of my own home and the technological entertainment contained within. Between my car and a hotel room, nowhere on the island of Great Britain was out of my reach. In June I spent a week in south England, then my girlfriend and I did the same in the southwest in September. Long weekends away, like the one on the Isle of Mull in October are becoming the norm.
 
@@ -130,7 +130,7 @@ Admittedly the concept of blogging about travel is one more facet to add, one mo
 
 ## The Power of the Slient Depths
 
-<img src="../../public/photos/IMG_2334.jpeg" alt="Lingcove valley, Lake District. Rocky ground interspersed with grass and puddles gives way to a dead tree and the valley beyond, bowl-shaped and green." />
+<img src="../../public/photos/lingcove-beck.jpeg" alt="Lingcove valley, Lake District. Rocky ground interspersed with grass and puddles gives way to a dead tree and the valley beyond, bowl-shaped and green." />
 
 There is a healing power out there for me between the hills. Its name is depth.
 
