--- a/content/blog/2022-12-27-hobbies-in-2022.md
+++ b/content/blog/2022-12-27-hobbies-in-2022.md
@@ -6,7 +6,7 @@ In particular I'll be focusing on Dungeons & Dragons and domestic travel. I coul
 
 ## Dungeons & Dragons & COVID-19
 
-I started playing D&D around the start of COVID-19 and the subsequent first lockdown here in the UK. After immersing myself in a campaign ran by the lead programmer at my job, I endeavoured to be a Dungeon Master myself. This meant gathering a party of players, scheduling sessions, and in my case, writing all of my own source material. Every character, story twist, setting, and battle were my own.
+I started playing D&D around the start of COVID-19 and the subsequent first lockdown here in the UK. After immersing myself in a campaign run by the lead programmer at my job, I endeavoured to be a Dungeon Master myself. This meant gathering a party of players, scheduling sessions, and in my case, writing all of my own source material. Every character, story twist, setting, and battle were my own.
 
 Entering 2021 I had a healthy ongoing campaign with happy players, each playing online from different European countries. In January I doubled down by starting a second online campaign, then in September I added an in-person campaign with close friends from my local area.
 
@@ -20,7 +20,7 @@ While that all sounds frightful, I was in my element. I would daydream of direct
 
 ## A Job That Felt Like a Hobby
 
-As the new year arrived I was already on my way out of my previous senior web engineer job, on my way to new role in mid-January. I was in need of a new challenge, one that would test the limits of my abilities.
+As the new year arrived, I was already on my way out of my previous senior web engineer job, on my way to new role in mid-January. I was in need of a new challenge, one that would test the limits of my abilities.
 
 Naturally any new job is demanding of a lot of your energy - you have new people to befriend, systems to learn, and institutional politics to sniff out. My reputation was virtually reset to zero, with a probation review keeping my performance in sharp focus.
 
@@ -32,9 +32,9 @@ It is simple to think of a day as three parts: work, leisure, and sleep. Every d
 
 ## A Hobby That Felt Like a Job
 
-Dungeons & Dragons inherently requires other people. If I were to write a campaign entirely by and for myself, I'm really just writing a book. Requiring other people means schedules, dates, obgliations. Let's meet every X weeks at Y time.
+Dungeons & Dragons inherently requires other people. If I were to write a campaign entirely by and for myself, I'm really just writing a book. Requiring other people means schedules, dates, obligations. Let's meet every X weeks at Y time.
 
-It's hard to "phone it in" with D&D, especially when you're writing your own content (*homebrew* in roleplay vernacular). Your players have opinions on whether a session is enjoyable or exciting or moved the story forward meaningfully. Typically I put as many hours into preparing for sessions as I did the sessions themselves. An average of six hours of session time per week becomes 12 hours, and can balloon further when one campaign travels to a new area.
+It's hard to "phone it in" with D&D, especially when you're writing your own content (*homebrew* in roleplay vernacular). Your players have opinions on whether a session is enjoyable or exciting or moved the story forward meaningfully. Typically, I put as many hours into preparing for sessions as I did the sessions themselves. An average of six hours of session time per week becomes 12 hours, and can balloon further when one campaign travels to a new area.
 
 Eventually it dawned on me that I was perpetually on the clock, working towards the next session - the next deadline. If I don't sit and squeeze creative juice out of myself for several hours this evening, I will have more to do tomorrow, and under more pressure. Sometimes I couldn't do it, which lead to anxiousness, so I felt I had no choice but to cancel the session. This unhealthy cycle is inherently unsustainable.
 
@@ -44,7 +44,7 @@ It was hard not to see similarities with work. Both were deadline driven, both r
 
 ## That Fateful Day in Scotland
 
-By mid-April the work project had been released and I'd taken a week of holiday as a reward. On the first day I planned to meet a colleague in her city of Edinburgh, two-and-a-half hours away by car from my northeastern English home.
+By mid-April the work project had been released and I'd taken a week of holiday as a reward. On the first day I planned to meet a colleague in her city of Edinburgh, two-and-a-half hours away by car from my north-eastern English home.
 
 Rather than spending a five hour round trip for a meet & greet with dinner I opted to make something of the day. Initially I couldn't figure out what I might like to do through the day in Edinburgh or the surrounding area, so I took the search back to a fundamental question: *what excites me about Scotland?*
 
@@ -62,7 +62,7 @@ Domestic travel was now on the menu, and I was hungry.
 
 ## Crushed by the Weight of Obsession
 
-Negativity flippantly breeds negavitiy, whereas positivity must be nurtured with care.
+Negativity flippantly breeds negativity, whereas positivity must be nurtured with care.
 
 Setting increasingly high standards and obligations for D&D only placed more pressure on me to deliver. As my love of the hobby began to waver as a consequence of other facets of life, the death spiral became clear - I had created a system that required the maximum amount of effort and creativity that I could muster, and I am not a factory. It was no longer simply enough to swim against the tide of upcoming sessions.
 
@@ -89,20 +89,20 @@ Each extra facet left less time for the others and made it easier to dance aroun
 Eventually it became too much to bear. A trifecta of circumstances started tumbling the D&D house of cards:
 
 1. I had felt unsatisfied with my second campaign since late 2021 for various reasons, and was frequently too anxious to prep. I had to pull the plug for my own health, regardless of the consequences.
-2. The outbreak of the Russo-Ukranian War and anti-transgender state government policy in Texas in quick succession drained my mental health and capacity for hobbies.
+2. The outbreak of the Russo-Ukrainian War and anti-transgender state government policy in Texas in quick succession drained my mental health and capacity for hobbies.
 3. Net positives from dropping one D&D campaign, despite initial sharp feelings of guilt and friendship strains, bolstered my resolve to make further cuts as needed.
 
 Shuttering a D&D campaign is such a mixed bag, dependent entirely on your players; some will understand and support your reasons despite their sadness, while others will begrudge the loss of the game and their time investment. The only way to know is to rip the plaster from the skin. It is hard to willingly confront yourself with the delicate undulations of adult friendship - how some people will drift from your life forever and that is both okay and normal.
 
 By quitting I was also closing the book on a body of work that I had been developing for two years. Stories unresolved, characters never met, places never visited, evils never vanquished. The hobby can always be revisited later, but the magic circumstances of now might be more ethereal. I might never play D&D again. I might never speak to my players again. But that was also true before D&D, so dust to dust.
 
-In my adolenscence I quit my university photography degree, tanking the hobby I had nutured for years before pursuing it academically. This year proved much the same for D&D - as I wound down each of my three campaigns one after another, the ideas and aspirations vanished with them, save for a single one-shot ran for close friends. Only as the year draws to a close and I look back do I wonder what would have happened if I had persisted, or what I might do next in the hobby space.
+In my adolescence I quit my university photography degree, tanking the hobby I had nurtured for years before pursuing it academically. This year proved much the same for D&D - as I wound down each of my three campaigns one after another, the ideas and aspirations vanished with them, save for a single one-shot ran for close friends. Only as the year draws to a close and I look back do I wonder what would have happened if I had persisted, or what I might do next in the hobby space.
 
-It is easy for me to frame this all as giving up. After all, it is unresolved through no fault but my own. However I choose to see strength in the uncomfortable act of stopping, rather than getting carried with the current of discomfort.
+It is easy for me to frame this all as giving up. After all, it is unresolved through no fault but my own. However, I choose to see strength in the uncomfortable act of stopping, rather than getting carried with the current of discomfort.
 
 ## Building Adventure Muscles
 
-As D&D waned, the void was filled with more domestic adventures. A smattering of day trips got the ball rolling, getting me and friends to new sights in the Scottish highlands and English Northumberland. The country roads felt limitless.
+As D&D waned, the void was filled with more domestic adventures. A smattering of day trips got the ball rolling, getting me and friends to new sights in the Scottish Highlands and English Northumberland. The country roads felt limitless.
 
 Eventually I started staying overnight - initially just overnight trips. The first was on a trip to Loch Alsh and the Isle of Skye with a friend - the latter only possible with the night's stay. I got to see the Old Man of Storr with my own eyes, a bucket list item, the first place in the highlands that I'd ever known by name.
 
