Generic, parsed markdown structure with metadata

--- a/content/blog/2022-12-27-hobbies-in-2022.md
+++ b/content/blog/2022-12-27-hobbies-in-2022.md
@@ -1,5 +1,7 @@
 # Hobbies in 2022: Passing the Torch of Obsession
 
+- Tags: photography
+
 It's almost the end of the year, so what better time to reflect on how I chose to spend the most notable portions of my spare time in 2022. I might even learn something about who I am along the way.
 
 In particular I'll be focusing on Dungeons & Dragons and domestic travel. I could also talk about playing video games or watching unhealthy amounts of YouTube, but I'd prefer to focus on the activities that I'm comfortable defining me.
