first -> summary, cover photos

--- a/content/blog/2022-12-27-hobbies-in-2022.md
+++ b/content/blog/2022-12-27-hobbies-in-2022.md
@@ -54,7 +54,7 @@ The answer, distilled through several years of visiting my girlfriend in the Lak
 
 I set off at 04:00, keen to have enough time to reach my destination, return to Edinburgh, and stop as I may along the way. A typical creature of habit, traversing unknown roads and pushing on into untapped scenery was refreshing, reinvigorating. While the A9 to Inverness is notoriously boring to drive, I revelled in the snow still clinging to the Grampian Mountains. A mundane glance at my satnav revealed a patch of blue near the road, so I deviated, rewarded with my first loch of the year - [Loch Ericht](https://en.wikipedia.org/wiki/Loch_Ericht).
 
-<img src="../../public/photos/loch-ericht.jpeg" alt="Loch Etive in early spring. A large lake flanked by tree-covered hills and clouds. Mountains in the distance still retain some snow." />
+<img src="../../public/photos/loch-ericht.jpeg" alt="Loch Etive in early spring. A large lake flanked by tree-covered hills and clouds. Mountains in the distance still retain some snow." cover />
 
 All of this was possible with a day of spare time, an early alarm, and the drive to find somewhere exciting. I was hooked. Soon I was at Loch Ness, then visiting Urquhart Castle before midday, despite being over 300 miles from home. If I had travelled south instead of north, I'd be in London.
 
