Fixed blog bullets

--- a/src/content/blog/2023-12-21-2023-in-a-nutshell.md
+++ b/src/content/blog/2023-12-21-2023-in-a-nutshell.md
@@ -1,23 +1,26 @@
 # 2023 in a Nutshell
 
+- Tags:
+
 2023 has been an eventful year for me! In this blog post I'll summarise my hobbies and goals this year and share some key statistics.
+
 
 ## Adventuring
 
 Adventuring is an umbrella term I use for hobbies that take me to adventurous destinations. regardless of why I'm there. I typically break this up further into: holidays, hiking, day trips, and travelling for work.
 
-- **Holidays:**
-  - *Defined as 2+ consecutive days away from home.*
-  - 16 total holidays: 13x Scotland, 2x Wales, 1x England.
+- Holidays
+  - Defined as 2+ consecutive days away from home.
+  - 16 total holidays - 13x Scotland, 2x Wales, 1x England.
   - 26 days of work leave used on holidays (only made possible through changing jobs).
   - 3 days of remote working while on holiday.
   - 10 different people I adventured with, not including solo adventuring.
-- **Day trips:**
+-  Day trips
   - 5 visits to the [Cairngorm Reindeer Herd](https://www.cairngormreindeer.co.uk/), 4 as part of holidays.
   - 4 concerts.
   - 3 aurora sightings.
   - 3 steam train sightings.
-- **Work:**
+-  Work
   - 5 days out from work for scheduled medical treatment.
   - 3 work events across 2 companies.
 
