Blog gallery links by oldest

--- a/src/content/blog/2023-12-21-2023-in-a-nutshell.md
+++ b/src/content/blog/2023-12-21-2023-in-a-nutshell.md
@@ -53,8 +53,8 @@ Some numbers:
   - *Sony ɑ7r V:* 13,700.
   - *Sony ɑ550:* 230.
 - 12,665 photos kept (44%).
-- 1,163 photos [added to my gallery](../../gallery?year=2023).
-- 122 photos [selected for my annual shortlist](../../gallery?tag=annual-shortlist&year=2023). This list is the best way to flick through the best of my year.
+- 1,163 photos [added to my gallery](../../gallery?year=2023&order=oldest).
+- 122 photos [selected for my annual shortlist](../../gallery?tag=annual-shortlist&year=2023&order=oldest). This list is the best way to flick through the best of my year.
 
 ## Rankings
 
