Blog hiking numbers

--- a/src/content/blog/2023-12-21-2023-in-a-nutshell.md
+++ b/src/content/blog/2023-12-21-2023-in-a-nutshell.md
@@ -41,6 +41,8 @@ In February I set myself the goal of hiking all 214 [Wainwrights](https://en.wik
 
 [This view of my photo gallery](../../gallery?tag=wainwright&year=2023&order=oldest) contains one photo of each Wainwright summit that I made this year.
 
+Across all my hikes this year I covered 307km and ascended 17.7km.
+
 <img src="https://s3.eu-west-2.amazonaws.com/jessrising.com/from-long-crag-to-the-irish-sea-230205-lg.jpeg" />
 
 ## Photography
